build: per-target builds